Changed logo to link to verse site, fixed overflow issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
 
   font-family: 'Cairo', sans-serif;
   font-size: 1.1em;
+  overflow-x: hidden !important;
+  width: 100vw !important;
 }
 
 h2,
